--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,4 +1,4 @@
-<%- include('layout', { title: 'About Us' }) %>
+<%- contentFor('body') %>
 
 <section class="section">
     <div class="container">
