--- a/views/admin/appointments.ejs
+++ b/views/admin/appointments.ejs
@@ -1,4 +1,4 @@
-<%- include('layout', { title: 'Appointments' }) %>
+<%- contentFor('body') %>
 
 <div style="margin-bottom: 2rem;">
     <h1>Appointment Requests</h1>
