--- a/views/admin/practice.ejs
+++ b/views/admin/practice.ejs
@@ -1,4 +1,4 @@
-<%- include('layout', { title: 'Practice Information' }) %>
+<%- contentFor('body') %>
 
 <div style="margin-bottom: 2rem;">
     <h1>Practice Information</h1>
