--- a/views/admin/service-form.ejs
+++ b/views/admin/service-form.ejs
@@ -1,4 +1,4 @@
-<%- include('layout', { title: service ? 'Edit Service' : 'Add Service' }) %>
+<%- contentFor('body') %>
 
 <div style="margin-bottom: 2rem;">
     <h1><%= service ? 'Edit Service' : 'Add New Service' %></h1>
