--- a/views/admin/team-form.ejs
+++ b/views/admin/team-form.ejs
@@ -1,4 +1,4 @@
-<%- include('layout', { title: member ? 'Edit Team Member' : 'Add Team Member' }) %>
+<%- contentFor('body') %>
 
 <div style="margin-bottom: 2rem;">
     <h1><%= member ? 'Edit Team Member' : 'Add Team Member' %></h1>
