--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,4 @@
-<%- include('layout', { title: 'Home' }) %>
-
+<%- contentFor('body') %>
 <!-- Hero Section -->
 <section class="hero">
     <div class="container">
