--- a/views/services.ejs
+++ b/views/services.ejs
@@ -1,4 +1,4 @@
-<%- include('layout', { title: 'Services' }) %>
+<%- contentFor('body') %>
 
 <section class="section">
     <div class="container">
