--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -1,4 +1,4 @@
-<%- include('layout', { title: 'Dashboard' }) %>
+<%- contentFor('body') %>
 
 <div style="margin-bottom: 2rem;">
     <h1>Dashboard</h1>
