--- a/views/admin/team.ejs
+++ b/views/admin/team.ejs
@@ -1,4 +1,4 @@
-<%- include('layout', { title: 'Manage Team' }) %>
+<%- contentFor('body') %>
 
 <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 2rem;">
     <div>
