--- a/views/contact-success.ejs
+++ b/views/contact-success.ejs
@@ -1,4 +1,4 @@
-<%- include('layout', { title: 'Appointment Requested' }) %>
+<%- contentFor('body') %>
 
 <section class="section">
     <div class="container">
