--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,4 +1,4 @@
-<%- include('layout', { title: 'Contact Us' }) %>
+<%- contentFor('body') %>
 
 <section class="section">
     <div class="container">
